# PathoAgent

./: .env.example  .gitignore  README.md  launcher.py  pyproject.toml  requirements-dev.txt  shared_image_utils.py  shared_logger.py  start.bat
.github/workflows/: ci.yml  release.yml
Patho-R1/: .gitignore  README.md  config.py  image_utils.py  inference.py  logger.py  model.py  requirements.txt  schemas.py  server.py
Patho-R1/clip/: dataset_config.json
Patho-R1/clip/dataset_process/: quit_to_web_dataset.py
Patho-R1/clip/script/: run_few_shot_eval.sh  run_retrieval_eval.sh  run_webdataset.sh  run_zero_shot_eval.sh
Patho-R1/clip/val/: few_shot_evaluation.py  retrieval_evaluation.py  zero_shot_evaluation.py
auth/: auth_logic.py  config.py  database.py  server.py
cellpose/: analysis.py  config.py  image_utils.py  logger.py  requirements.txt  server.py
launcher/: config.py  env_scanner.py  logger.py  main.py  service_manager.py
shared/: __init__.py  auth_middleware.py  dotenv.py  security.py
tests/: conftest.py
tests/cellpose/: conftest.py
tests/launcher/: test_service_manager.py
tests/patho/: conftest.py  test_image_utils.py  test_schemas.py
web/: .env.example  README.md  launch-agent-web.py  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  utils.ts  vite-env.d.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/permissions/: launcher.toml
web/src-tauri/src/: main.rs
web/src/agent/: calculator.ts  deepseekLLM.ts  edgeDetection.ts  index.ts  llm.ts  (+6 more)
(+68 files in other folders)
