[project]
name = "patho-agent"
version = "0.1.0"
description = "病理图像分析 AI Agent"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
